--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,10 +2,10 @@
 layout: page
 title: Portfolio
 description: "<a href='/contact' target='_blank'>Contact us</a> for design requests and quotes."
-permalink: /portfolio/
+paginate: true
 ---
 
-{% for project in site.portfolio %}
+{% for project in paginator.posts %}
 
 {% if project.redirect %}
 <div class="project">
@@ -46,3 +46,30 @@ permalink: /portfolio/
 {% endif %}
 
 {% endfor %}
+
+
+{% if paginator.total_pages > 1 %}
+<div class="pagination">
+  {% if paginator.previous_page %}
+    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
+  {% else %}
+    <span>&laquo; Prev</span>
+  {% endif %}
+
+  {% for page in (1..paginator.total_pages) %}
+    {% if page == paginator.page %}
+      <em>{{ page }}</em>
+    {% elsif page == 1 %}
+      <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
+    {% else %}
+      <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
+    {% endif %}
+  {% endfor %}
+
+  {% if paginator.next_page %}
+    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
+  {% else %}
+    <span>Next &raquo;</span>
+  {% endif %}
+</div>
+{% endif %}
