Add call to cation in front page

--- a/index.html
+++ b/index.html
@@ -12,3 +12,5 @@ layout: default
   <hr>
   <br/>
 </div>
+
+<h3 style="text-align: center">View our <a href="{{ site.baseurl }}/portfolio" target="_blank">portfolio</a> and <a href="{{ site.baseurl }}/contact" target="_blank">contact us</a> for a quote on your very own glass piece.</h3>
