No open to new tab for portfolio

--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@ layout: default
   <br/>
 </div>
 
-<h3 style="text-align: center">View our <a href="{{ site.baseurl }}/portfolio" target="_blank">portfolio</a> and <a href="{{ site.baseurl }}/contact" target="_blank">contact us</a> for a quote on your very own glass piece.</h3>
+<h3 style="text-align: center">View our <a href="{{ site.baseurl }}/portfolio">portfolio</a> and <a href="{{ site.baseurl }}/contact">contact us</a> for a quote on your very own glass piece.</h3>
