--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
-layout: default
+layout: home
 ---
 
-<div class="header-bar">
+<!--div class="header-bar">
   <div class="logo wrapper">
     <div class='blue-bird'></div>
   </div>
@@ -11,6 +11,6 @@ layout: default
   <br/>
   <hr>
   <br/>
-</div>
+</div-->
 
 <h3 style="text-align: center">View our <a href="{{ site.baseurl }}/portfolio">portfolio</a> and <a href="{{ site.baseurl }}/contact">contact us</a> for a quote on your very own glass piece.</h3>
