--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -88,3 +88,7 @@ paginate: true
   {% endif %}
 </div>
 {% endif %}
+
+<script type="text/javascript">
+  $('#portfolio').addClass('active');
+</script>
