--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@ layout: home
   <hr>
   <br/>
 </div-->
+<h1 style="text-align: center;font-size: 5rem;line-height: 5rem;margin-bottom:35px;">S & R<br>Creations</h1>
+<div style="max-width: calc(800px - (50px * 2));margin: auto;">
+<hr>
+<h3 style="text-align: center; font-size: 1.2rem;margin-top:40px;">View our <a href="{{ site.baseurl }}/portfolio">portfolio</a> and <a href="{{ site.baseurl }}/contact">contact us</a> for a quote on your very own glass piece.</h3>
+</div>
 
-<h3 style="text-align: center">View our <a href="{{ site.baseurl }}/portfolio">portfolio</a> and <a href="{{ site.baseurl }}/contact">contact us</a> for a quote on your very own glass piece.</h3>
+<script type="text/javascript">
+	$('#home').addClass('active');
+</script>
