--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@ layout: home
   <hr>
   <br/>
 </div-->
-<h1 style="text-align: center;font-size: 5rem;line-height: 5rem;margin-bottom:35px;">S & R<br>Creations</h1>
+<h1 class="header-image">S & R<br>Creations</h1>
 <div style="max-width: calc(800px - (50px * 2));margin: auto;">
-<hr>
-<h3 style="text-align: center; font-size: 1.2rem;margin-top:40px;">View our <a href="{{ site.baseurl }}/portfolio">portfolio</a> and <a href="{{ site.baseurl }}/contact">contact us</a> for a quote on your very own glass piece.</h3>
+<!--hr-->
+	<h3 style="text-align: center; font-size: 1.7rem;margin-top:6vh;">View our <a href="{{ site.baseurl }}/portfolio">portfolio</a> and <a href="{{ site.baseurl }}/contact">contact us</a> for a quote on your very own glass piece.</h3>
 </div>
 
 <script type="text/javascript">
